[gd_scene load_steps=46 format=3 uid="uid://bto2balokx0ds"]

[ext_resource type="Texture2D" uid="uid://xlelddpu0tr1" path="res://assets/sprites/characters/archer/PrinceRanger.png" id="1_p0vlq"]
[ext_resource type="Script" uid="uid://cuo3lui4v2aqf" path="res://scripts/Player.gd" id="1_v6fml"]
[ext_resource type="PackedScene" uid="uid://dsoi8fg760sgw" path="res://scenes/Arrow.tscn" id="2_3li8b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v6fml"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3li8b"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eyey"]
atlas = ExtResource("1_p0vlq")
region = Rect2(256, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3wef"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4126"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkdrv"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7iby"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rnld"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srp4u"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfpux"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_61ith"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebwui"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfy4j"]
atlas = ExtResource("1_p0vlq")
region = Rect2(256, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv3ic"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8lor"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e537"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p07f3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_viqgg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkxt"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsi7p"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jpwa"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfeki"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axnmu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvsjc"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxdpb"]
atlas = ExtResource("1_p0vlq")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agngo"]
atlas = ExtResource("1_p0vlq")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrixf"]
atlas = ExtResource("1_p0vlq")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmt83"]
atlas = ExtResource("1_p0vlq")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4as6"]
atlas = ExtResource("1_p0vlq")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1r6t"]
atlas = ExtResource("1_p0vlq")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0asu"]
atlas = ExtResource("1_p0vlq")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq1a3"]
atlas = ExtResource("1_p0vlq")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu4mg"]
atlas = ExtResource("1_p0vlq")
region = Rect2(256, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6la"]
atlas = ExtResource("1_p0vlq")
region = Rect2(288, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yrxk4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6fml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3li8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eyey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3wef")
}],
"loop": true,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4126")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7iby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rnld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srp4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfpux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61ith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebwui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfy4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv3ic")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8lor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e537")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p07f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_viqgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsi7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jpwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfeki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axnmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvsjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxdpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agngo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmt83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4as6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1r6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0asu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq1a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu4mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6la")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eg1p0"]
radius = 7.0
height = 32.0

[node name="Player" type="Area2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_v6fml")
arrow_scene = ExtResource("2_3li8b")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yrxk4")
animation = &"attack"
frame = 7
frame_progress = 0.971569

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eg1p0")

[node name="BowPoint" type="Marker2D" parent="."]
position = Vector2(10.6667, -3.33333)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
